--- a/Desenvolvimento Backend/Bloco-27-ArquiteturaRestERestful/Dia-01-Camada-Model/exercicioMongoDB/package.json
+++ b/Desenvolvimento Backend/Bloco-27-ArquiteturaRestERestful/Dia-01-Camada-Model/exercicioMongoDB/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "exercicio",
+  "name": "exerciciomongodb",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "body-parser": "^1.19.1",
+    "celebrate": "^15.0.0",
     "express": "^4.17.2",
     "mongodb": "^4.2.2"
   }
