--- a/Desenvolvimento Backend/Bloco-28-Autenticacao e Upload de arquivos/Dia-03-Testes de Integracao Api/nodejs-jwt-base-project/package.json
+++ b/Desenvolvimento Backend/Bloco-28-Autenticacao e Upload de arquivos/Dia-03-Testes de Integracao Api/nodejs-jwt-base-project/package.json
@@ -11,6 +11,7 @@
     "bcrypt-nodejs": "~0.0.3",
     "body-parser": "~1.19.0",
     "express": "~4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "jwt-simple": "~0.5.6",
     "moment": "~2.24.0",
     "nodemon": "~2.0.4"
